--- a/vignettes/coex-vignette.Rmd
+++ b/vignettes/coex-vignette.Rmd
@@ -15,83 +15,91 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
+```{r setup, eval=FALSE}
 library(coex)
-library(recount)
+library(SummarizedExperiment)
 library(magrittr)
 library(edgeR)
+library(easierData)
+library(ExperimentHub)
 ```
 
 Load the recount data for SRP041675
-```{r}
-project_info <- recount::download_study("SRP041675", download = FALSE)
-load(file = url(project_info))
-assay(rse_gene)[1:6, 1:3]
-colData(rse_gene)$title %>% table()
+```{r, eval=FALSE}
+eh <- ExperimentHub()
+list_easierData()
+mariathasan_dat <- eh[["EH6677"]]
+#mariathasan_dat %>% assay() %>% head()
+#mariathasan_dat %>% colData()
+#library(curatedAdipoRNA)
+#data("eas   ")
+```
+
+Subset for data from Illumina HiSeq platform
+```{r, eval=FALSE}
+adipo_counts <- adipo_counts[ ,grepl(pattern = "Illumina HiSeq",
+                                     x = adipo_counts@colData$instrument_model)]
 ```
 
 Load the gene expression counts into a coexList object
-```{r}
-cl <- coexList(counts = assay(rse_gene))
+```{r, eval=FALSE}
+cl <- coexList(counts = assay(mariathasan_dat))
 ```
 
 Add the gene and sample metadata to the coexList object
-```{r}
-colData(cl) <- colData(rse_gene)
-rowData(cl) <- rowData(rse_gene)
+```{r, eval=FALSE}
+colData(cl) <- colData(mariathasan_dat)
+rowData(cl) <- rowData(mariathasan_dat)
 ```
 
 Normalise the data for co-expression calculations using the CTF method and scale using `asinh()`.
 https://github.com/krishnanlab/RNAseq_coexpression/blob/main/src/CTF_normalize.R
-```{r}
-norm_factors <- calcNormFactors(assay(cl),
-                                lib.size = colSums(assay(cl)),
-                                method = "TMM")
-
-CTF_norm <- sweep(assay(cl), 2, norm_factors, "/")
-CTF_norm <- asinh(CTF_norm)
-
-cl@normCounts <- CTF_norm
+```{r, eval=FALSE}
+cl <- normCounts(cl)
 ```
 
 Filter the data
-```{r}
+```{r, eval=FALSE}
 checkFilter(cl, propGenes = 0.25)
 cl <- applyFilter(cl, propGenes = 0.25)
 ```
 
 Calculate soft power thresholds for WGCNA network
-```{r}
-#cl <- calcSoftPower(cl)
+```{r, eval=FALSE}
+cl <- calcSoftPower(cl)
 ```
-
 Check what the estimated power is
-```{r}
-#cl@powerEstimate
+```{r, eval=FALSE}
+cl@powerEstimate
 ```
 
 Plot soft power estimates
-```{r}
-#plotSoftPower(cl)
+```{r, eval=FALSE}
+plotSoftPower(cl)
 ```
 
 Calc adjacency matrix
-```{r}
-
+```{r, eval=FALSE}
+cl <- calcAdjacency(cl, method = "wgcna", softPower = 10)
 ```
 
 Calculate topological overlap and cluster
-```{r}
+```{r, eval=FALSE}
+cl <- calcTOM(cl, )
+```
+
+Cluster 
+```{r, eval=FALSE}
 
 ```
 
-Plot the clustering and modules
-```{r}
+Plot clustering
+```{r, eval=FALSE}
 
 ```
 
 Plot the modules for groups
-```{r}
+```{r, eval=FALSE}
 
 ```
 
